# Rabbit

./: .gitignore  README.md  Rabbit.cabal
src/: Algebra.hs  Analysis.hs  Lib.hs  Logic.hs  RequestCalculation.hs  analyst.hs  doctor.hs  math.hs  processCalculation.hs  requestCalculation.hs  tech.hs
test/quickcheck/: Quickcheck.hs
test/unit/: AlgebraSpec.hs  AnalysisSpec.hs  LogicSpec.hs  ProcessCalculationSpec.hs
