name:                Rabbit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/OlgaSlota/Rabbit#readme
license:             BSD3
license-file:        LICENSE
author:              Olga Słota, Wojciech Baczyński
maintainer:          example@example.com
copyright:           2017 Olga Słota, Wojciech Baczyński
category:            Commandline
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Logic
                     , Analysis
                     , Algebra
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , amqp
                     , hint


  default-language:    Haskell2010

executable Rabbit-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , containers
                     , amqp
                     , Rabbit
  default-language:    Haskell2010

test-suite Rabbit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Rabbit
                     , HUnit
                     , QuickCheck
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite unit-tests
  type:          exitcode-stdio-1.0
  main-is:       Spec.hs
  hs-source-dirs: test/unit
  build-depends: base
               , hspec
               , hspec-discover
               , Rabbit
               , QuickCheck

  exposed-modules: AlgebraSpec
                 , AnalysisSpec
                 , LogicSpec

source-repository head
  type:     git
  location: https://github.com/OlgaSlota/Rabbit
